apps/prod/jellyfin/service-minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-minio
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9001
      targetPort: 9001
      name: console
