apps/prod/jellyfin/httproute-minio.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-minio-route
  namespace: prod
spec:
  parentRefs:
    - name: shared-gateway
      namespace: ingress-gateway
  hostnames:
    - "jellyfin-minio.va1.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin-minio
          port: 9001
