apps/prod/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: prod
spec:
  parentRefs:
    - name: shared-gateway
      namespace: ingress-gateway
  hostnames:
    - "jellyfin.va1.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-jellyfin
          port: 8096
